--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     - primary meta tags
   -->
   <title>FinTech</title>
-  <meta name="title" content="Adex">
+  <meta name="title" content="FinTech">
   <meta name="description" content="FinTech">
 
   <!-- 
