--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     - primary meta tags
   -->
   <title>FinTech</title>
-  <meta name="title" content="FinTech">
+  <meta name="title" content="Adex">
   <meta name="description" content="FinTech">
 
   <!-- 
@@ -59,7 +59,7 @@
 
         <div class="navbar-top">
           <a href="#" class="logo">
-            <img src="./assets/images/logo-light.svg" width="74" height="24" alt="Adex home">
+            <img src="./assets/images/tech.png" width="74" height="24" alt="Adex home">
           </a>
 
           <button class="nav-close-btn" aria-label="close menu" data-nav-toggler>
